deploy/zakupki.yaml
apiVersion: v1
kind: Service
metadata:
  name: zakupki
spec:
  selector:
    app: zakupki
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: zakupki
  labels:
    app: zakupki
spec:
  replicas: 3
  selector:
    matchLabels:
      app: zakupki
  template:
    metadata:
      labels:
        app: zakupki
    spec:
      containers:
      - name: zakupki
        image: macieklewkowicz/zakupki:latest
        ports:
        - containerPort: 80
