deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zakupki
spec:
  rules:
  - http:
      paths:
      - path: /zakupki
        pathType: Prefix
        backend:
          service:
            name: zakupki
            port:
              number: 80
